best-practices-gpol/add-network-policy/.chainsaw-test/exception-generated-sibling.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: exception-networkpolicy-ns-sibling
