best-practices-gpol/add-network-policy/.chainsaw-test/exception-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exception-networkpolicy-ns
