best-practices-gpol/add-network-policy/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-network-policy
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: old-resource.yaml
    - assert:
        file: old-resource.yaml
  - name: step-02
    try:
    - apply:
        file: ../add-network-policy.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Namespace
          name: hello-world-namespace
    - sleep:
        duration: 5s
    - apply:
        file: ../.kyverno-test/resource.yaml
    - assert:
        file: ../.kyverno-test/resource.yaml
    - sleep:
        duration: 10s
  - name: step-04
    try:
    - assert:
        file: ../.kyverno-test/generatedResource.yaml
    - error:
        file: notGeneratedResource.yaml
  - name: exception-generation
    try:
    - apply:
        file: exception-namespace.yaml
    - apply:
        file: exception.yaml
    - apply:
        file: exception-resource.yaml
    - sleep:
        duration: 15s
    - error:
        file: exception-generated.yaml
    - apply:
        file: exception-resource-sibling.yaml
    - sleep:
        duration: 15s
    - assert:
        file: exception-generated-sibling.yaml
  - name: exception-revocation
    try:
    - delete:
        file: exception.yaml
    - delete:
        file: exception-resource.yaml
    - sleep:
        duration: 5s
    - apply:
        file: exception-resource.yaml
    - sleep:
        duration: 15s
    - assert:
        file: exception-generated.yaml
